--- a/exercícios/ex23/tabela01.html
+++ b/exercícios/ex23/tabela01.html
@@ -11,21 +11,16 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
             
         }
-
-        tr.linha {
-            background-color: gray;
-        }
-
+        
         td {
             border: 1px solid black;
             padding: 8px;
-        }
-
-        td.dado {
-            background-color: yellow;
+            text-align: center; /* Alinhamento horizontal */
+            vertical-align: middle; /* Alinhamento vertical */
         }
     </style>
 </head>
@@ -46,7 +41,7 @@
             <td>C1</td>
         </tr>
 
-        <tr class="linha"> <!--Segunda linha-->
+        <tr> <!--Segunda linha-->
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
@@ -60,7 +55,7 @@
 
         <tr> <!--Quarta linha-->
             <td>A4</td>
-            <td class="dado">B4</td>
+            <td>B4</td>
             <td>C4</td>
         </tr>
 
