--- a/exercícios/ex23/tabela01.html
+++ b/exercícios/ex23/tabela01.html
@@ -30,7 +30,7 @@
         Hierarquia de tabelas (simples)
         Table - tabela
         Table Row - linha da tabela
-            Table HEADEr - cabeçalho de tabela
+            Table HEADER - cabeçalho de tabela
             Table Data - dado da tabela
 
     -->
