--- a/exercícios/desafios/d13/index.html
+++ b/exercícios/desafios/d13/index.html
@@ -25,8 +25,17 @@
             color: white;
         }
         
-        td.num {
+        td.nota{
             text-align: center;
+        }
+
+        td#med1 {
+            background-color: gray;
+            color: white;
+        }
+        td#med2 {
+            background-color: gray;
+            color: white;
         }
 
 
@@ -52,48 +61,48 @@
             <tr>
                 <th rowspan="4">Exatas</th>
                 <td>Matemática</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
             </tr>
             <tr>
                 <td>Física</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
             </tr>
             <tr>
                 <td>Química</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
             </tr>
             <tr>
                 <td>Biologia</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
             </tr>
             <tr>
                 <th colspan="4" class="media">Média de Exatas</th>
-                <td class="num">0.0</td>
+                <td class="nota" id="med1">0.0</td>
             </tr>
             <tr>
                 <th rowspan="2">Humanas</th>
                 <td>História</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
             </tr>
             <tr>
                 <td>Geografia</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
-                <td class="num">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
+                <td class="nota">0.0</td>
             </tr>
             <tr>
                 <th colspan="4" class="media">Média de Humanas</th>
-                <td class="num">0.0</td>
+                <td class="nota" id="med2">0.0</td>
             </tr>
            
 
