--- a/exercícios/ex26/mq2/index.html
+++ b/exercícios/ex26/mq2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media query</title>
-    <!-- os que estão entre parenteses são os Media feautures-->
+    <!-- Media Queries é igual as media type + media features as media type são tipos de mídias os que estão entre parenteses são os Media feautures elas são carcterísticas de mídia. -->
     <link rel="stylesheet" href="estilos/style.css" media="all">
     <link rel="stylesheet" href="estilos/retrato.css" media="screen and(orientation: portrait)">
     <link rel="stylesheet" href="estilos/paisagem.css" media="screen and (orientation: landscape)">
