--- a/exercícios/ex24/github.html
+++ b/exercícios/ex24/github.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="imagens/tela-github.jpg" alt="GitHub">
-    <a href="https://gustavoguanabara.github.io/" target="_blank">ACESSE</a>
+    <a href="https://claudiadejesus.github.io/" target="_blank">ACESSE</a>
 </body>
 </html>
