--- a/exercícios/ex24/youtube.html
+++ b/exercícios/ex24/youtube.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="#" alt="YouTube">
+    <img src="imagens/tela-youtube.jpg" alt="YouTube">
     <a href="https://www.youtube.com/@claudiagusmaooliveira" target="_blank">ACESSE</a>
 </body>
 </html>
