exercício 26 colocando ícone

--- a/exercícios/ex26/mq5/index.html
+++ b/exercícios/ex26/mq5/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
+        <span id="cardápio" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         <menu>
-            
-                <ul>
-                    <li><a href="#">Opção 1</a></li>
-                    <li><a href="#">Opção 2</a></li>
-                    <li><a href="#">Opção 3</a></li>
-                    <li><a href="#">Opção 4</a></li>
-                    <li><a href="#">Opção 5</a></li>
-                </ul>
+            <ul>
+                <li><a href="#">Opção 1</a></li>
+                <li><a href="#">Opção 2</a></li>
+                <li><a href="#">Opção 3</a></li>
+                <li><a href="#">Opção 4</a></li>
+                <li><a href="#">Opção 5</a></li>
+            </ul>
         </menu>
     </header>
     <main>
@@ -30,5 +31,10 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore assumenda voluptatibus cumque autem debitis, beatae iusto dolore laborum quod at. Praesentium ratione, debitis accusamus qui esse dolor quod nostrum. Rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolorum similique sequi mollitia amet dolore hic dolorem libero? Libero ipsam totam itaque temporibus dignissimos exercitationem quo laudantium rerum nam autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quod, quasi facere sint similique exercitationem eum consequuntur ratione veritatis numquam sequi laboriosam quidem qui minima magnam omnis laborum eveniet dolores?</p>
         </article>
     </main>
+    <script>
+        function clickMenu(){
+            
+        }
+    </script>
 </body>
 </html>
