--- a/exercícios/ex26/mq5/index.html
+++ b/exercícios/ex26/mq5/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Meu site</h1>
         <span id="cardápio" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
-        <menu>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -33,7 +33,11 @@
     </main>
     <script>
         function clickMenu(){
-            
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
         }
     </script>
 </body>
