--- a/exercícios/ex25/form3.html
+++ b/exercícios/ex25/form3.html
@@ -11,6 +11,7 @@
         <p>
             <label for="inome">Nome</label>
             <input type="text" name="nome" id="inome"  maxlength="30" placeholder="Nome completo" autocomplete="name" required>
+            <!-- o Placeholder deixa tipo uma marca d'agua do nome na Lacuna-->
         </p>
         <p>
             <label for="imedia">Média</label>
