--- a/exercícios/ex26/mq4/index.html
+++ b/exercícios/ex26/mq4/index.html
@@ -3,18 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Media Queries</title>
-    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
+    <header>
+        <h1>Meu site</h1>
+        <span id="cardápio" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <menu id="itens">
+            <ul>
+                <li><a href="#">Opção 1</a></li>
+                <li><a href="#">Opção 2</a></li>
+                <li><a href="#">Opção 3</a></li>
+                <li><a href="#">Opção 4</a></li>
+                <li><a href="#">Opção 5</a></li>
+            </ul>
+        </menu>
+    </header>
     <main>
-        <h1>Testando Media Queries</h1>
-        <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
-        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
-        <img id="print" src="imagens/icon-print.png" alt="Versão para impressora">
-        <img id="pc" src="imagens/icon-pc.png" alt="Versão para desktop">
-        <img id="tv" src="imagens/icon-tv.png" alt="Versão para Tv">
+        <article>
+            <h2>Testando Media Queries</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad commodi animi asperiores cumque minus perspiciatis suscipit! Illum molestias quam cupiditate? Quidem ab provident facilis mollitia consequatur ut, saepe iusto accusantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. At ad aliquid fuga cupiditate rerum quas necessitatibus laborum facilis iure optio a velit voluptatem, minus atque. Beatae repellendus illum esse sunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis doloremque quaerat qui atque aperiam deserunt praesentium magnam eligendi! Nemo itaque animi sapiente voluptas ducimus ipsa vitae dolores commodi et odit!</p>
+            
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus voluptatem deleniti, odio ut libero laudantium iure quis non recusandae unde? Perferendis illum totam illo quisquam esse soluta amet a minima? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore laudantium fuga illo tempora dolorem enim assumenda, reiciendis doloremque deleniti labore quod quaerat corrupti, aut itaque deserunt? Est, nesciunt alias! At? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae omnis dolores consequatur iste aut accusantium repellendus nesciunt aliquid, cum, repudiandae sit cupiditate neque. Accusantium, deleniti expedita porro quisquam tenetur amet!</p>
+            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore assumenda voluptatibus cumque autem debitis, beatae iusto dolore laborum quod at. Praesentium ratione, debitis accusamus qui esse dolor quod nostrum. Rerum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt dolorum similique sequi mollitia amet dolore hic dolorem libero? Libero ipsam totam itaque temporibus dignissimos exercitationem quo laudantium rerum nam autem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quod, quasi facere sint similique exercitationem eum consequuntur ratione veritatis numquam sequi laboriosam quidem qui minima magnam omnis laborum eveniet dolores?</p>
+        </article>
     </main>
+    <script>
+
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
+            }
+        }
+        function clickMenu(){
+            if (itens.style.display == 'block'){
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
