--- a/exercícios/ex23/tabela06.html
+++ b/exercícios/ex23/tabela06.html
@@ -28,7 +28,7 @@
         }
 
         div#container {
-            overflow-x: auto;
+            overflow-x: auto; /* deixa a tabela responsiva */
         }
     </style>
 </head>
