--- a/exercícios/ex21/caixa2.html
+++ b/exercícios/ex21/caixa2.html
@@ -8,6 +8,7 @@
         body{
             font-family: Arial, Helvetica, sans-serif;
             background-color: dimgray;
+            margin: 0px;
         }
         header{
             background-color: white;
